css/css/style.css
/* ... */
span.error {
  color: rgba(255, 255, 255, 0.5); }

#message {
  resize: vertical; }

#form-message-warning, #form-message-success {
  display: none; }

#form-message-warning {
  color: #f64b3c; }

#form-message-success {
  color: #8cba51;
  font-size: 18px;
  font-weight: bold; }

.submitting {
  float: left;
  width: 100%;
  padding: 10px 0;
  display: none;
  font-weight: bold;
  font-size: 13px;
  letter-spacing: .1rem;
  color: rgba(255, 255, 255, 0.5); }

.unslate_co--sticky {
  position: -webkit-sticky;
  position: sticky;
  top: 80px; }
  .unslate_co--sticky:after, .unslate_co--sticky:before {
    content: '';
    display: table; }

.comment-form-wrap {
  clear: both; }

.comment-list {
  padding: 0;
  margin: 0; }
  .comment-list .children {
    padding: 50px 0 0 40px;
    margin: 0;
    float: left;
    width: 100%; }
  .comment-list li {
    padding: 0;
    margin: 0 0 30px 0;
    float: left;
    width: 100%;
    clear: both;
    list-style: none; }
    .comment-list li .vcard {
      width: 80px;
      float: left; }
      .comment-list li .vcard img {
        width: 50px;
        border-radius: 50%; }
    .comment-list li .comment-body {
      float: right;
      width: calc(100% - 80px); }
      .comment-list li .comment-body h3 {
        font-size: 20px; }
      .comment-list li .comment-body .meta {
        text-transform: uppercase;
        font-size: 13px;
        letter-spacing: .1em;
        color: #ccc;
        margin-bottom: 20px; }
      .comment-list li .comment-body .reply {
        padding: 7px 15px;
        background: gray;
        color: #fff;
        text-transform: uppercase;
        border-radius: 30px;
        font-size: 11px;
        font-weight: 900;
        letter-spacing: .1rem; }
        .comment-list li .comment-body .reply:hover {
          color: #fff;
          background: #8c8c8c; }

.categories_tags {
  font-weight: bold; }

.post-single-navigation a {
  line-height: 1.5;
  font-weight: bold;
  padding-top: 2rem;
  padding-bottom: 2rem;
  display: inline-block; }
  .post-single-navigation a span {
    margin-bottom: 10px;
    font-size: 11px;
    text-transform: uppercase;
    color: rgba(255, 255, 255, 0.4); }

.lines-wrap {
  position: absolute;
  z-index: -1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: hidden; }
  @media (max-width: 767.98px) {
    .lines-wrap {
      display: none; } }
  .lines-wrap .lines-inner {
    position: absolute;
    width: 1140px;
    left: 50%;
    margin-left: -570px;
    top: 0;
    height: 100%;
    border-left: 1px solid #222;
    border-right: 1px solid #222; }
    .lines-wrap .lines-inner .lines {
      position: absolute;
      left: 33.333333%;
      right: 33.333333%;
      height: 100%;
      border-left: 1px solid #222;
      border-right: 1px solid #222; }

.gsap-reveal {
  display: block;
  border: 1px solid red;
  position: relative; }
  .gsap-reveal .cover {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    border: 1px solid red;
    background: #000; }

